# remember

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
bot/: __main__.py  calendar_kb.py  config.py  scheduler.py
bot/db/: engine.py  models.py
bot/handlers/: commands.py
bot/middlewares/: rate_limit.py
