[project]
name = "remember-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20,<4",
    "aiohttp>=3.9",
    "apscheduler>=3.10,<4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "dateparser>=1.2",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
prod = ["asyncpg>=0.29"]

[tool.setuptools.packages.find]
include = ["bot*"]

[project.scripts]
remember = "bot.__main__:main"
